- fixed bug with wrong time on silence level detection for mp3 streams
- fixed bug with sync error mode & output format (not creating output files)
- fixed important bug with the 'rm' parameter - SPLT_SKIPPOINT in general
- fixed issue with mp3 frame mode: frame mode is not any more enabled by default
- fixed mp3 non seekable stdin bug
- fixed bug with ogg negative granulepos packets
- small adjustment on the mp3 seekable non frame mode & non seekable frame mode
- removed unuseful 'frame mode enabled' message for dewrapping & sync error mode

libmp3splt version 0.5.7a
-------------------------------------------------------------

- fixed important regression bug with the gap parameter of auto adjust

libmp3splt version 0.5.7
-------------------------------------------------------------

- added internationalization support (gettext) + french & german translations
- added patch for output format variables @u, @U, @l, @L
- added support to output both ID3v1 and ID3v2 tags
- changed code to look for '.so.0' instead of '.so' for the plugins
- fixed compilation bug for libmp3splt detection to look for 'libmp3splt/mp3splt.h' instead of mp3splt.h 
- fixed bug #2809816 with cue file : artist tags were the same
- fixed important bug when detecting the total time : the last split file was shorter

libmp3splt version 0.5.6
-------------------------------------------------------------

- fixed compilation problem, bug #2785683
- fixed critical bug with overlap splitpoints not working (feature #1530782 => bug)
- fixed critical bug with mp3 stdin (& framemode)
- fixed bug #2786300 in plugins compilation (added -lm)
- Xing header is now written even if SPLT_NO_TAGS option is used
- added SPLT_OPT_XING option to not write Xing header
- fixed bug with custom tags and multiple usages of @o
- fixed bug with stdin & id3v2 & xing
- fixed a small bug with genre in custom tags
- fixed some warning messages & added some more
- fixed dewrap error message